langtools/test/tools/javac/annotations/typeAnnotations/failures/StaticMethods.out
StaticMethods.java:9:34: compiler.err.non-static.cant.be.ref: kindname.variable, this
1 error
